# Projects

./: README.md
C/: CMakeLists.txt  cmake_executable.cmake  cmake_library.cmake  main.c
C++/: CMakeLists.txt  CMakePresets.json  clean.sh  cmake_executable.cmake  cmake_library.cmake  cmake_program.cmake
C++/cmake/: preconfigure.cmake
C++/libraries/: CMakeLists.txt  cmake_library.cmake
C++/libraries/interface/: CMakeLists.txt
C++/libraries/interface/__template__/: CMakeLists.txt.in
C++/libraries/interface/__template__/cmake/: __template__-config.cmake.in.in
C++/libraries/interface/__template__/include/__template__/: __template__.hpp.in
C++/libraries/interface/__template__/src/: CMakeLists.txt.in
C++/libraries/interface/__template__/tests/: CMakeLists.txt.in
C++/libraries/interface/array/: CMakeLists.txt  CMakePresets.json
C++/libraries/interface/array/include/array/: array.hpp
C++/libraries/interface/array/src/: main.cpp
C++/libraries/interface/array/tests/: array_tests.cpp
C++/libraries/interface/iterator/: CMakeLists.txt
C++/libraries/interface/iterator/include/iterator/: iterator.hpp
C++/libraries/interface/iterator/src/: CMakeLists.txt  main.cpp
C++/libraries/interface/iterator/tests/: iterator_tests.cpp
C++/libraries/shared/: CMakeLists.txt
C++/libraries/shared/__template__/: CMakeLists.txt.in
C++/libraries/shared/__template__/include/__template__/: export.hpp.in
C++/libraries/shared/__template__/src/: CMakeLists.txt.in  __template__.cpp.in
C++/libraries/shared/__template__/tests/: CMakeLists.txt.in
C++/libraries/static/: CMakeLists.txt
C++/libraries/static/__template__/: CMakeLists.txt.in
C++/libraries/static/__template__/cmake/: __template__-config.cmake.in.in
C++/libraries/static/__template__/include/__template__/: __template__.hpp.in  export.hpp.in
C++/libraries/static/__template__/src/: CMakeLists.txt.in  main.cpp.in
C++/libraries/static/__template__/tests/: CMakeLists.txt.in  __template___tests.cpp.in
C++/programs/: cmake_program.cmake
C++/programs/__template__/: CMakeLists.txt.in
C++/programs/__template__/src/: CMakeLists.txt.in  main.cpp.in
C++/programs/__template__/tests/: CMakeLists.txt.in  __template___tests.cpp.in
C++/scripts/: mklib.sh  mkprg.sh  mkrepo.sh
C++/templates/: cmake_uninstall.cmake.in
C/executables/: CMakeLists.txt
C/executables/__template__/: CMakeLists.txt.in
C/executables/__template__/src/: CMakeLists.txt.in  main.c.in
C/executables/__template__/tests/: CMakeLists.txt.in  __template___tests.cpp.in
C/libraries/: CMakeLists.txt  cmake_library.cmake
C/libraries/interface/: CMakeLists.txt
C/libraries/interface/__template__/: CMakeLists.txt.in
C/libraries/interface/__template__/include/__template__/: __template__.h.in
C/libraries/interface/__template__/src/: CMakeLists.txt.in  main.c.in
C/libraries/interface/__template__/tests/: CMakeLists.txt.in  __template___tests.cpp.in
C/libraries/shared/: CMakeLists.txt
C/libraries/shared/__template__/: CMakeLists.txt.in
C/libraries/shared/__template__/cmake/: __template__-config.cmake.in.in
C/libraries/shared/__template__/include/__template__/: export.h.in
C/libraries/shared/__template__/src/: CMakeLists.txt.in  __template__.c.in  main.c.in
C/libraries/shared/__template__/tests/: CMakeLists.txt.in
C/libraries/shared/lambda/cmake/: lambda-config.cmake.in
C/libraries/shared/lambda/include/lambda/: export.h
C/libraries/shared/lambda/src/: CMakeLists.txt  lambda.c  main.c
C/libraries/shared/lambda/tests/: CMakeLists.txt  lambda_tests.cpp
C/libraries/static/: CMakeLists.txt
C/libraries/static/__template__/: CMakeLists.txt.in
C/libraries/static/__template__/include/__template__/: __template__.h.in  export.h.in
C/libraries/static/__template__/src/: CMakeLists.txt.in  __template__.c.in
C/libraries/static/__template__/tests/: CMakeLists.txt.in  __template___tests.cpp.in
C/libraries/static/lambda/: .gitignore  CMakeLists.txt  CMakePresets.json
C/libraries/static/lambda/cmake/: lambda-config.cmake.in
C/libraries/static/lambda/include/lambda/: export.h  lambda.h
C/libraries/static/lambda/tests/: CMakeLists.txt
C/programs/__template__/: CMakeLists.txt.in
C/programs/__template__/src/: CMakeLists.txt.in  main.c.in
C/programs/__template__/tests/: CMakeLists.txt.in
C/scripts/: git.sh
C/templates/: cmake_uninstall.cmake.in
CMake/: CMakeLists.txt  CMakePresets.json  README.md
CMake/modules/: FunctionsC.cmake  FunctionsCMake.cmake  FunctionsCXX.cmake  VariablesC.cmake  VariablesCMake.cmake  VariablesCXX.cmake
CMake/presets/: cmake-verison.json  cmake-version.json  default.json
CMake/presets/compilers/: clang++.json  clang.json  g++.json  gcc.json
CMake/presets/configure/: default.json  linux-clang-make.json  linux-clang-ninja.json
CMake/presets/configure-presets/: default.json
CMake/presets/generators/: makefile.json  ninja.json
CMake/scripts/: configure_file.cmake
CMake/templates/: __template__-config.cmake.in
CMake/toolchains/: linux-arm32.cmake  linux-x86-64.cmake
CMake/variables/: cmake.cmake
Java/: pom.xml
Java/programs/Grade Calculator/: pom.xml
Java/programs/Grade Calculator/courses/: CS 362.json  PHYS 142.json  invalid.json
Java/programs/JFLAP/: pom.xml
Java/programs/JFLAP/jflap-files/cs301/bonus1/: 1.jff
Java/programs/JFLAP/jflap-files/cs301/bonus2/: 1.jff
Java/programs/JFLAP/jflap-files/cs301/bonus3/: 1a(NFA).jff  1a.jff  1b(NFA).jff  1b.jff  1c(NFA).jff  1c.jff
Java/programs/JFLAP/jflap-files/cs301/bonus6/: 6.jff
Java/programs/JFLAP/jflap-files/cs301/homework1/: 1a.jff  1b.jff  1c.jff  2a.jff  2b.jff  2c.jff
Java/programs/JFLAP/jflap-files/cs301/homework2/: 1a(NFA).jff  1a.jff  1b(NFA).jff  1b.jff  1c(NFA).jff  1c.jff  1d(NFA).jff  1d.jff  1e(NFA).jff  1e.jff  1f(NFA).jff  1f.jff
Java/programs/JFLAP/jflap-files/cs301/homework3/: 1a.jff  1b.jff  1c.jff  2a.jff  2b.jff  2c.jff
Java/programs/JFLAP/jflap-files/cs301/homework4/: 3a.jff  3b.jff  3c.jff  3d.jff
Python/: __init__.py
Python/pyshell/env/: __main__.py  path.py
scripts/bash/: nix.sh
(+72 files in other folders)
