#-----------------------------------------------------------------------------------------------------------------------
# Includes
#-----------------------------------------------------------------------------------------------------------------------
include("../cmake/preconfigure.cmake")

#-----------------------------------------------------------------------------------------------------------------------
# Information
#-----------------------------------------------------------------------------------------------------------------------
cmake_minimum_required(VERSION ${CMAKE_MINIMUM_REQUIRED_VERSION})
project(Libraries LANGUAGES NONE)

#-----------------------------------------------------------------------------------------------------------------------
# Subdirectories
#-----------------------------------------------------------------------------------------------------------------------
add_subdirectory("interface")
add_subdirectory("shared")
add_subdirectory("static")

#-----------------------------------------------------------------------------------------------------------------------
# Variables
#-----------------------------------------------------------------------------------------------------------------------
set(NAME "" CACHE STRING "NAME")
set(TYPE "" CACHE STRING "TYPE")
set(NAMESPACE "" CACHE STRING "NAMESPACE")
set(VERSION 1.0.0 CACHE STRING "VERSION")
set(DESCRIPTION "" CACHE STRING "DESCRIPTION")

