#-----------------------------------------------------------------------------------------------------------------------
# Information
#-----------------------------------------------------------------------------------------------------------------------
cmake_minimum_required(VERSION ${CMAKE_MINIMUM_REQUIRED_VERSION})
project(Libraries LANGUAGES NONE)

cmake_file_api(
        QUERY
        API_VERSION 1
        CODEMODEL 2.3
)


#-----------------------------------------------------------------------------------------------------------------------
# Subdirectories
#-----------------------------------------------------------------------------------------------------------------------
add_subdirectory("interface")
add_subdirectory("shared")
add_subdirectory("static")

